# nn-misis-2526

./: pyproject.toml
configs/: retrieval.json  transformer.json
misisnn/custom_torch_entities/: adam.py  autograd_ops.py  batchnorm.py  linear.py  test_model.py
misisnn/custom_transformer/: config.py  data.py  mask_helper.py  train.py  train_new.py  train_tokenizer.py
misisnn/custom_transformer/blocks/: attention.py  embed.py  ffn.py  fulltransformer.py  test.py  transformer.py
misisnn/pretrained_transformer/: model.py
misisnn/retrieval/: config.py  create_faiss_index.py  data.py  model.py  test.py  train.py  trainable.py
misisnn/rnn/: data.py  display_tokenizer.py  model.py  train.py  train_tokenizer.py
misisnn/titanic/: dataset.py  model.py  train.py
misisnn/trainer/: config.py  trainer.py
tasks/task1/: task1.md
tasks/task2/: task2.md
tasks/task4/: task4.md
