[tool.poetry]
name = "misis-2526"
version = "0.1.0"
description = ""
authors = ["Афанасьев Максим Александрович"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
torch = "^2.6.0"
numpy = "^2.2.3"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
torchmetrics = "^1.6.1"
aim = "3.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
